Media Queries Fixed on iPhone6/7/8

--- a/src/index.css
+++ b/src/index.css
@@ -118,6 +118,9 @@ header h1 {
 	.swal2-popup {
 		font-size: 1rem !important;
 	}
+	h1 {
+		font-size: 2.5rem;
+	}
 }
 
 .formulario input[type='text'],
